--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,23 +1,49 @@
 .navbar{
     display: flex;
-    height: 50px;
+    height: 72px;
     align-items: center;
     justify-content: space-between;
-    background-color: aqua;
+    background-color: rgba(255, 255, 255, 1);
 
 }
 
 .nav__left{
     display: flex;
+    margin-left: 20px;
 }
-.nav__left h4{
+.nav__left * {
     margin: 10px;
+}
+.nav__left h3 {
+    width: 121px;
+    height: 29px;
+}
+.nav__left h4 {
+1    margin-top: 12px;
 }
 
 .nav__right{
     display: flex;
+    align-items: center;
 
 }
-.nav__right h4 {
-    margin: 10px;
+.nav__right p {
+    width: 91px;
+    color: black;
+    text-decoration: none;
+    height: 17px;
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: center;
+}
+.nav__right button {
+    width: 94px;
+    height: 33px;
+    background-color: rgba(29,78,216,1);
+    border-radius: 4px;
+    padding: 8px 16px 8px 16px;
+    gap: 8px;
+    color: rgba(255, 255, 255, 1);
+    border: 0;
+    margin-left: 8px;
 }
